begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_package
DECL|package|org.apache.hadoop.yarn.server.api.protocolrecords.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonProtos
operator|.
name|RegistrationResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonServiceProtos
operator|.
name|RegisterNodeManagerResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonServiceProtos
operator|.
name|RegisterNodeManagerResponseProtoOrBuilder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|RegisterNodeManagerResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|RegistrationResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|RegistrationResponsePBImpl
import|;
end_import

begin_class
DECL|class|RegisterNodeManagerResponsePBImpl
specifier|public
class|class
name|RegisterNodeManagerResponsePBImpl
extends|extends
name|ProtoBase
argument_list|<
name|RegisterNodeManagerResponseProto
argument_list|>
implements|implements
name|RegisterNodeManagerResponse
block|{
DECL|field|proto
name|RegisterNodeManagerResponseProto
name|proto
init|=
name|RegisterNodeManagerResponseProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|RegisterNodeManagerResponseProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|field|registartionResponse
specifier|private
name|RegistrationResponse
name|registartionResponse
init|=
literal|null
decl_stmt|;
DECL|field|rebuild
specifier|private
name|boolean
name|rebuild
init|=
literal|false
decl_stmt|;
DECL|method|RegisterNodeManagerResponsePBImpl ()
specifier|public
name|RegisterNodeManagerResponsePBImpl
parameter_list|()
block|{
name|builder
operator|=
name|RegisterNodeManagerResponseProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|RegisterNodeManagerResponsePBImpl (RegisterNodeManagerResponseProto proto)
specifier|public
name|RegisterNodeManagerResponsePBImpl
parameter_list|(
name|RegisterNodeManagerResponseProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|getProto ()
specifier|public
name|RegisterNodeManagerResponseProto
name|getProto
parameter_list|()
block|{
if|if
condition|(
name|rebuild
condition|)
name|mergeLocalToProto
argument_list|()
expr_stmt|;
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
DECL|method|mergeLocalToBuilder ()
specifier|private
name|void
name|mergeLocalToBuilder
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|registartionResponse
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setRegistrationResponse
argument_list|(
name|convertToProtoFormat
argument_list|(
name|this
operator|.
name|registartionResponse
argument_list|)
argument_list|)
expr_stmt|;
name|this
operator|.
name|registartionResponse
operator|=
literal|null
expr_stmt|;
block|}
block|}
DECL|method|mergeLocalToProto ()
specifier|private
name|void
name|mergeLocalToProto
parameter_list|()
block|{
if|if
condition|(
name|viaProto
condition|)
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|mergeLocalToBuilder
argument_list|()
expr_stmt|;
name|proto
operator|=
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|rebuild
operator|=
literal|false
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|RegisterNodeManagerResponseProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getRegistrationResponse ()
specifier|public
name|RegistrationResponse
name|getRegistrationResponse
parameter_list|()
block|{
name|RegisterNodeManagerResponseProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
name|this
operator|.
name|registartionResponse
operator|!=
literal|null
condition|)
block|{
return|return
name|this
operator|.
name|registartionResponse
return|;
block|}
if|if
condition|(
operator|!
name|p
operator|.
name|hasRegistrationResponse
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
name|this
operator|.
name|registartionResponse
operator|=
name|convertFromProtoFormat
argument_list|(
name|p
operator|.
name|getRegistrationResponse
argument_list|()
argument_list|)
expr_stmt|;
name|rebuild
operator|=
literal|true
expr_stmt|;
return|return
name|this
operator|.
name|registartionResponse
return|;
block|}
annotation|@
name|Override
DECL|method|setRegistrationResponse (RegistrationResponse registrationResponse)
specifier|public
name|void
name|setRegistrationResponse
parameter_list|(
name|RegistrationResponse
name|registrationResponse
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|registrationResponse
operator|==
literal|null
condition|)
name|builder
operator|.
name|clearRegistrationResponse
argument_list|()
expr_stmt|;
name|this
operator|.
name|registartionResponse
operator|=
name|registrationResponse
expr_stmt|;
name|rebuild
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|convertFromProtoFormat (RegistrationResponseProto p)
specifier|private
name|RegistrationResponsePBImpl
name|convertFromProtoFormat
parameter_list|(
name|RegistrationResponseProto
name|p
parameter_list|)
block|{
return|return
operator|new
name|RegistrationResponsePBImpl
argument_list|(
name|p
argument_list|)
return|;
block|}
DECL|method|convertToProtoFormat (RegistrationResponse t)
specifier|private
name|RegistrationResponseProto
name|convertToProtoFormat
parameter_list|(
name|RegistrationResponse
name|t
parameter_list|)
block|{
return|return
operator|(
operator|(
name|RegistrationResponsePBImpl
operator|)
name|t
operator|)
operator|.
name|getProto
argument_list|()
return|;
block|}
block|}
end_class

end_unit

