begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.server.api.protocolrecords.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonProtos
operator|.
name|HeartbeatResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonServiceProtos
operator|.
name|NodeHeartbeatResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonServiceProtos
operator|.
name|NodeHeartbeatResponseProtoOrBuilder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|NodeHeartbeatResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|HeartbeatResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|HeartbeatResponsePBImpl
import|;
end_import

begin_class
DECL|class|NodeHeartbeatResponsePBImpl
specifier|public
class|class
name|NodeHeartbeatResponsePBImpl
extends|extends
name|ProtoBase
argument_list|<
name|NodeHeartbeatResponseProto
argument_list|>
implements|implements
name|NodeHeartbeatResponse
block|{
DECL|field|proto
name|NodeHeartbeatResponseProto
name|proto
init|=
name|NodeHeartbeatResponseProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|NodeHeartbeatResponseProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|field|heartbeatResponse
specifier|private
name|HeartbeatResponse
name|heartbeatResponse
init|=
literal|null
decl_stmt|;
DECL|method|NodeHeartbeatResponsePBImpl ()
specifier|public
name|NodeHeartbeatResponsePBImpl
parameter_list|()
block|{
name|builder
operator|=
name|NodeHeartbeatResponseProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|NodeHeartbeatResponsePBImpl (NodeHeartbeatResponseProto proto)
specifier|public
name|NodeHeartbeatResponsePBImpl
parameter_list|(
name|NodeHeartbeatResponseProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|getProto ()
specifier|public
name|NodeHeartbeatResponseProto
name|getProto
parameter_list|()
block|{
name|mergeLocalToProto
argument_list|()
expr_stmt|;
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
DECL|method|mergeLocalToBuilder ()
specifier|private
name|void
name|mergeLocalToBuilder
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|heartbeatResponse
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setHeartbeatResponse
argument_list|(
name|convertToProtoFormat
argument_list|(
name|this
operator|.
name|heartbeatResponse
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
DECL|method|mergeLocalToProto ()
specifier|private
name|void
name|mergeLocalToProto
parameter_list|()
block|{
if|if
condition|(
name|viaProto
condition|)
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|mergeLocalToBuilder
argument_list|()
expr_stmt|;
name|proto
operator|=
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|NodeHeartbeatResponseProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getHeartbeatResponse ()
specifier|public
name|HeartbeatResponse
name|getHeartbeatResponse
parameter_list|()
block|{
name|NodeHeartbeatResponseProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
name|this
operator|.
name|heartbeatResponse
operator|!=
literal|null
condition|)
block|{
return|return
name|this
operator|.
name|heartbeatResponse
return|;
block|}
if|if
condition|(
operator|!
name|p
operator|.
name|hasHeartbeatResponse
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
name|this
operator|.
name|heartbeatResponse
operator|=
name|convertFromProtoFormat
argument_list|(
name|p
operator|.
name|getHeartbeatResponse
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|this
operator|.
name|heartbeatResponse
return|;
block|}
annotation|@
name|Override
DECL|method|setHeartbeatResponse (HeartbeatResponse heartbeatResponse)
specifier|public
name|void
name|setHeartbeatResponse
parameter_list|(
name|HeartbeatResponse
name|heartbeatResponse
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|heartbeatResponse
operator|==
literal|null
condition|)
name|builder
operator|.
name|clearHeartbeatResponse
argument_list|()
expr_stmt|;
name|this
operator|.
name|heartbeatResponse
operator|=
name|heartbeatResponse
expr_stmt|;
block|}
DECL|method|convertFromProtoFormat (HeartbeatResponseProto p)
specifier|private
name|HeartbeatResponsePBImpl
name|convertFromProtoFormat
parameter_list|(
name|HeartbeatResponseProto
name|p
parameter_list|)
block|{
return|return
operator|new
name|HeartbeatResponsePBImpl
argument_list|(
name|p
argument_list|)
return|;
block|}
DECL|method|convertToProtoFormat (HeartbeatResponse t)
specifier|private
name|HeartbeatResponseProto
name|convertToProtoFormat
parameter_list|(
name|HeartbeatResponse
name|t
parameter_list|)
block|{
return|return
operator|(
operator|(
name|HeartbeatResponsePBImpl
operator|)
name|t
operator|)
operator|.
name|getProto
argument_list|()
return|;
block|}
block|}
end_class

end_unit

