begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.server.api.records.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|java
operator|.
name|nio
operator|.
name|ByteBuffer
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonProtos
operator|.
name|NodeActionProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonProtos
operator|.
name|RegistrationResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerCommonProtos
operator|.
name|RegistrationResponseProtoOrBuilder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|NodeAction
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|api
operator|.
name|records
operator|.
name|RegistrationResponse
import|;
end_import

begin_class
DECL|class|RegistrationResponsePBImpl
specifier|public
class|class
name|RegistrationResponsePBImpl
extends|extends
name|ProtoBase
argument_list|<
name|RegistrationResponseProto
argument_list|>
implements|implements
name|RegistrationResponse
block|{
DECL|field|proto
name|RegistrationResponseProto
name|proto
init|=
name|RegistrationResponseProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|RegistrationResponseProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|field|secretKey
specifier|private
name|ByteBuffer
name|secretKey
init|=
literal|null
decl_stmt|;
DECL|method|RegistrationResponsePBImpl ()
specifier|public
name|RegistrationResponsePBImpl
parameter_list|()
block|{
name|builder
operator|=
name|RegistrationResponseProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|RegistrationResponsePBImpl (RegistrationResponseProto proto)
specifier|public
name|RegistrationResponsePBImpl
parameter_list|(
name|RegistrationResponseProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|getProto ()
specifier|public
name|RegistrationResponseProto
name|getProto
parameter_list|()
block|{
name|mergeLocalToProto
argument_list|()
expr_stmt|;
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
DECL|method|mergeLocalToBuilder ()
specifier|private
name|void
name|mergeLocalToBuilder
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|secretKey
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setSecretKey
argument_list|(
name|convertToProtoFormat
argument_list|(
name|this
operator|.
name|secretKey
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
DECL|method|mergeLocalToProto ()
specifier|private
name|void
name|mergeLocalToProto
parameter_list|()
block|{
if|if
condition|(
name|viaProto
condition|)
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|mergeLocalToBuilder
argument_list|()
expr_stmt|;
name|proto
operator|=
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|RegistrationResponseProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getSecretKey ()
specifier|public
name|ByteBuffer
name|getSecretKey
parameter_list|()
block|{
name|RegistrationResponseProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
name|this
operator|.
name|secretKey
operator|!=
literal|null
condition|)
block|{
return|return
name|this
operator|.
name|secretKey
return|;
block|}
if|if
condition|(
operator|!
name|p
operator|.
name|hasSecretKey
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
name|this
operator|.
name|secretKey
operator|=
name|convertFromProtoFormat
argument_list|(
name|p
operator|.
name|getSecretKey
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|this
operator|.
name|secretKey
return|;
block|}
annotation|@
name|Override
DECL|method|setSecretKey (ByteBuffer secretKey)
specifier|public
name|void
name|setSecretKey
parameter_list|(
name|ByteBuffer
name|secretKey
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|secretKey
operator|==
literal|null
condition|)
name|builder
operator|.
name|clearSecretKey
argument_list|()
expr_stmt|;
name|this
operator|.
name|secretKey
operator|=
name|secretKey
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getNodeAction ()
specifier|public
name|NodeAction
name|getNodeAction
parameter_list|()
block|{
name|RegistrationResponseProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
operator|!
name|p
operator|.
name|hasNodeAction
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
return|return
name|convertFromProtoFormat
argument_list|(
name|p
operator|.
name|getNodeAction
argument_list|()
argument_list|)
return|;
block|}
annotation|@
name|Override
DECL|method|setNodeAction (NodeAction nodeAction)
specifier|public
name|void
name|setNodeAction
parameter_list|(
name|NodeAction
name|nodeAction
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|nodeAction
operator|==
literal|null
condition|)
block|{
name|builder
operator|.
name|clearNodeAction
argument_list|()
expr_stmt|;
return|return;
block|}
name|builder
operator|.
name|setNodeAction
argument_list|(
name|convertToProtoFormat
argument_list|(
name|nodeAction
argument_list|)
argument_list|)
expr_stmt|;
block|}
DECL|method|convertFromProtoFormat (NodeActionProto p)
specifier|private
name|NodeAction
name|convertFromProtoFormat
parameter_list|(
name|NodeActionProto
name|p
parameter_list|)
block|{
return|return
name|NodeAction
operator|.
name|valueOf
argument_list|(
name|p
operator|.
name|name
argument_list|()
argument_list|)
return|;
block|}
DECL|method|convertToProtoFormat (NodeAction t)
specifier|private
name|NodeActionProto
name|convertToProtoFormat
parameter_list|(
name|NodeAction
name|t
parameter_list|)
block|{
return|return
name|NodeActionProto
operator|.
name|valueOf
argument_list|(
name|t
operator|.
name|name
argument_list|()
argument_list|)
return|;
block|}
block|}
end_class

end_unit

